WAL: RUN 62-63 docs — FINALSUMMARY §LXXI + WAL entries
* FINALSUMMARY grew from ~2100 → ~2130 lines covering RUN 62-63:
  - §LXXI: GPU ONNX inference VERIFIED (88ms forward pass on RTX 5070)
* RUN 12-63 master totals: 58 RUNs delivered, 537 cumulative tests,
  0 failures, 6 hypothesis cards accepted, Qwen2.5-0.5B GPU-enabled.
* WAL.md appended with RUN 62-63 summaries.